--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,10 +6,10 @@ android {
 
     defaultConfig {
         applicationId "com.example.ssleepy"
-        minSdkVersion 19
+        minSdkVersion 24
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.github.nkzawa:socket.io-client:0.6.0'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0-alpha02'
 
     testImplementation 'junit:junit:4.12'
 
